tests/src/frontend/runtime/invalid/main_awaitable_void.sk
async fun main(): ^void {
  await something()
}
